--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "src/assets/vendor/remixicon/remixicon.css",
               "src/assets/vendor/simple-datatables/style.css",
               "src/assets/css/style.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": [
 			  "src/assets/vendor/apexcharts/apexcharts.min.js",
